Fix pricing spacing, card border, HowItWorks font sizes, and mobile p font-size

--- a/src/index.css
+++ b/src/index.css
@@ -448,7 +448,7 @@
   }
 
   :where(:not(:has([class*=" text-"]), :not(:has([class^="text-"])))) p {
-    font-size: 1rem;
+    font-size: 1.125rem;
     font-weight: var(--font-weight-normal);
     line-height: 1.6;
   }
