--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -223,7 +223,7 @@
     }
 
     p {
-      font-size: 1rem;
+      font-size: 1.125rem;
       font-weight: var(--font-weight-normal);
       line-height: 1.6;
     }
